--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -103,12 +103,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
   text-decoration: none;
-
-  &:visited {
-    color: darken($brand-color, 15%);
-  }
 
   &:hover {
     color: $text-color;
@@ -228,7 +223,7 @@ pre {
 /**
  * Tables
  */
-table {
+table:not(.post-table) {
   margin-bottom: $spacing-unit;
   width: 100%;
   text-align: $table-text-align;
