Layout and workflow updates
Additions
---------
- script to check diffs with minima original code

Modifications
-------------
- layout changes in code formatting when lineno is used
- add lines in footnote element and padding in footnote
- add back to home link

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -27,7 +27,7 @@ layout: page
       {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
       <tr>
           <td class="td-date">
-              <span class="post-meta">{{ post.date | date: date_format }}</span>
+              <span class="post-list-meta">{{ post.date | date: date_format }}</span>
           </td>
           <td>
               <a class="post-link" href="{{ post.url | relative_url }}">
