--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -37,7 +37,8 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-bottom: $spacing-unit / 2;
+  margin-top: $spacing-unit / 4;
+  margin-bottom: $spacing-unit / 4;
 }
 
 
@@ -141,27 +142,31 @@ blockquote {
 /**
  * Code formatting
  */
-pre,
-code {
+pre, code {
   @include relative-font-size(0.9375);
-  border: 1px solid $grey-color-light;
   border-radius: 3px;
   background-color: #eef;
-}
-
-code {
-  padding: 1px 5px;
-}
-
-pre {
-  padding: 8px 12px;
+  margin: 0px;
   overflow-x: auto;
+}
 
-  > code {
-    border: 0;
-    padding-right: 0;
-    padding-left: 0;
-  }
+pre td {
+    padding: 0px;
+}
+
+figure > pre {
+    padding: 5px 12px;
+}
+
+pre.lineno {
+    padding-right: 12px;
+    color:grey;
+    border-right: 1px dotted grey;
+    border-radius: 0px;
+}
+
+td.code {
+    padding-left: 12px;
 }
 
 
@@ -223,7 +228,7 @@ pre {
 /**
  * Tables
  */
-table:not(.post-table) {
+table:not(.post-table):not(.rouge-table) {
   margin-bottom: $spacing-unit;
   width: 100%;
   text-align: $table-text-align;
@@ -246,4 +251,8 @@ table:not(.post-table) {
   td {
     border: 1px solid $grey-color-light;
   }
+}
+
+.rouge-table {
+    border-spacing: 0px;
 }
