--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -197,6 +197,11 @@
 }
 
 .post-meta {
+  @include relative-font-size(1);
+  color: $grey-color;
+}
+
+.post-list-meta {
   @include relative-font-size(1.25);
   color: $grey-color;
 }
@@ -246,4 +251,14 @@
       @include relative-font-size(1.125);
     }
   }
+}
+
+$footnote-line: 1px solid #e8e8e8;
+.footnotes {
+    border-top: $footnote-line;
+    border-bottom: $footnote-line;
+}
+
+.footnote {
+    padding-left: 1px;
 }
