Fix title to fit in small devices

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -23,6 +23,19 @@
   }
 }
 
+#title-alt {
+    display: none;
+}
+
+@include media-query($on-palm) {
+    #title {
+        display: none;
+    }
+    #title-alt {
+        display: flex;
+    }
+}
+
 .site-nav {
   float: right;
   line-height: $base-line-height * $base-font-size * 2.25;
