--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -9,10 +9,12 @@
   position: relative;
 }
 
+$header-height: $base-line-height * $base-font-size * 2.25;
+
 .site-title {
   @include relative-font-size(1.625);
   font-weight: 300;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  line-height: $header-height;
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
@@ -32,13 +34,13 @@
         display: none;
     }
     #title-alt {
-        display: flex;
+        display: initial;
     }
 }
 
 .site-nav {
   float: right;
-  line-height: $base-line-height * $base-font-size * 2.25;
+  line-height: $header-height;
 
   .nav-trigger {
       display: none;
@@ -65,7 +67,7 @@
     background-color: $background-color;
     border: 1px solid $grey-color-light;
     border-radius: 5px;
-    text-align: right;
+    text-align: center;
 
     label[for="nav-trigger"] {
       display: block;
@@ -77,7 +79,6 @@
     }
 
     .menu-icon {
-      display: block;
       float: right;
       width: 36px;
       height: 26px;
@@ -90,14 +91,58 @@
       }
     }
 
-    input ~ .trigger {
-      clear: both;
-      display: none;
+    #hamburger-icon {
+        display: block;
     }
 
-    input:checked ~ .trigger {
-      display: block;
-      padding-bottom: 5px;
+    #x-icon {
+      display:none;
+    }
+
+    //.trigger {
+    //  position: fixed;
+    //  width: 100%;
+    //  height: 100%;
+    //  top: 0;
+    //  left: 0;
+    //  background: white;
+    //}
+
+    input  {
+      ~ .trigger {
+        clear: both;
+        display: none;
+      }
+
+      ~ label #hamburger-icon {
+        display: block;
+      }
+
+      ~ label #x-icon {
+        display: none;
+      }
+    }
+
+    input:checked  {
+      ~ .trigger {
+        display: block;
+        padding-bottom: 5px;
+        position: fixed;
+        top: $header-height + 3;
+        //top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: $background-color;
+      }
+
+      ~ label #hamburger-icon {
+        display: none;
+      }
+
+      ~ label #x-icon {
+        display: block;
+      }
     }
 
     .page-link {
@@ -107,7 +152,6 @@
       &:not(:last-child) {
         margin-right: 0;
       }
-      margin-left: 20px;
     }
   }
 }
@@ -215,12 +259,12 @@
 }
 
 .post-list-meta {
-  @include relative-font-size(1.25);
+  @include relative-font-size(1.13);
   color: $grey-color;
 }
 
 .post-link {
-  @include relative-font-size(1.25);
+  @include relative-font-size(1.13);
 }
 
 
