--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,15 +1,17 @@
+$header-height: $base-line-height * $base-font-size * 1.8;
+
 /**
  * Site header
  */
 .site-header {
   border-bottom: 1px solid $grey-color-light;
-  min-height: $spacing-unit * 1.865;
+  min-height: $header-height;
 
   // Positioning context for the mobile navigation icon
-  position: relative;
+  position: fixed;
+  background: $background-color;
+  width: 100%;
 }
-
-$header-height: $base-line-height * $base-font-size * 2.25;
 
 .site-title {
   @include relative-font-size(1.625);
@@ -62,7 +64,8 @@ $header-height: $base-line-height * $base-font-size * 2.25;
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 9px;
+    top: 5px;
+    bottom: 5px;
     right: $spacing-unit / 2;
     background-color: $background-color;
     border: 1px solid $grey-color-light;
@@ -73,7 +76,6 @@ $header-height: $base-line-height * $base-font-size * 2.25;
       display: block;
       float: right;
       width: 36px;
-      height: 36px;
       z-index: 2;
       cursor: pointer;
     }
@@ -83,7 +85,7 @@ $header-height: $base-line-height * $base-font-size * 2.25;
       width: 36px;
       height: 26px;
       line-height: 0;
-      padding-top: 10px;
+      padding-top: 8.5px;
       text-align: center;
 
       > svg {
@@ -128,7 +130,7 @@ $header-height: $base-line-height * $base-font-size * 2.25;
         display: block;
         padding-bottom: 5px;
         position: fixed;
-        top: $header-height + 3;
+        top: $header-height + 2;
         //top: 0;
         left: 0;
         width: 100%;
@@ -232,7 +234,8 @@ $header-height: $base-line-height * $base-font-size * 2.25;
  * Page content
  */
 .page-content {
-  padding: $spacing-unit 0;
+  //padding: $spacing-unit 0;
+  padding: ($header-height + $spacing-unit) 0;
   flex: 1;
 }
 
