--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -8,7 +8,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
   min-height: $header-height;
 
   // Positioning context for the mobile navigation icon
-  position: fixed;
+  position: relative;
   background: $background-color;
   width: 100%;
 }
@@ -64,12 +64,8 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 
   @include media-query($on-palm) {
     position: absolute;
-    top: 5px;
-    bottom: 5px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
-    border-radius: 5px;
     text-align: center;
 
     label[for="nav-trigger"] {
@@ -78,6 +74,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
       width: 36px;
       z-index: 2;
       cursor: pointer;
+      margin-top: 3px;
     }
 
     .menu-icon {
@@ -85,7 +82,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
       width: 36px;
       height: 26px;
       line-height: 0;
-      padding-top: 8.5px;
+      padding-top: 11px;
       text-align: center;
 
       > svg {
@@ -100,15 +97,6 @@ $header-height: $base-line-height * $base-font-size * 1.8;
     #x-icon {
       display:none;
     }
-
-    //.trigger {
-    //  position: fixed;
-    //  width: 100%;
-    //  height: 100%;
-    //  top: 0;
-    //  left: 0;
-    //  background: white;
-    //}
 
     input  {
       ~ .trigger {
@@ -128,14 +116,13 @@ $header-height: $base-line-height * $base-font-size * 1.8;
     input:checked  {
       ~ .trigger {
         display: block;
-        padding-bottom: 5px;
         position: fixed;
         top: $header-height + 2;
         //top: 0;
         left: 0;
         width: 100%;
-        height: 100%;
         background: $background-color;
+        border-bottom: 1px solid $grey-color-light;
       }
 
       ~ label #hamburger-icon {
@@ -144,6 +131,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 
       ~ label #x-icon {
         display: block;
+        position: fixed;
       }
     }
 
@@ -235,7 +223,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
  */
 .page-content {
   //padding: $spacing-unit 0;
-  padding: ($header-height + $spacing-unit) 0;
+  padding: $spacing-unit 0;
   flex: 1;
 }
 
