--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,15 +14,8 @@
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
     {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" id="title" rel="author" href="{{ "/" | relative_url }}">
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
         {{ site.title | escape }}
-    </a>
-    <a class="site-title" id="title-alt" rel="author" href="{{ "/" | relative_url }}">
-        {% if site.title_alt %}
-            {{ site.title_alt | escape }}
-        {% else %}
-            {{ site.title | escape }}
-        {% endif %}
     </a>
 
     {%- if page_paths -%}
