--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,9 @@ layout: default
 ---
 <article class="post h-entry" itemscope itemtype="http://schema.org/BlogPosting">
 
+  {% if page.path contains '/_drafts/' %}
+  <span style="color: red; font-weight: bold;">DRAFT</span>
+  {% endif %}
   <header class="post-header">
     <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
     <p class="post-meta">
