--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -33,6 +33,9 @@ layout: page
               <a class="post-link" href="{{ post.url | relative_url }}">
                   {{ post.title | escape }}
               </a>
+              {% if post.draft %}
+              <span style="color: red; font-weight: bold;">DRAFT</span>
+              {% endif %}
           </td>
       </tr>
       {%- if site.show_excerpts -%}
