--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <style TYPE="text/css">
 .site-title {
   margin: 0px;
-  padding-left: 25px;
+  /*padding-left: 25px;*/
   padding-bottom: 1px;
-  background-image: url('/assets/images/main-circle.png');
+  /*background-image: url('/assets/images/main-circle.png');*/
   background-size: 20px;  
   background-repeat: no-repeat;
   background-position: left center;
