--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -234,6 +234,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 .post-meta {
   @include relative-font-size(1);
   color: $grey-color;
+  margin-top: $spacing-unit / 8;
 }
 
 .post-list-meta {
@@ -255,9 +256,10 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 }
 
 .post-title {
-  @include relative-font-size(1.6);
+  @include relative-font-size(1.625);
   letter-spacing: -1px;
   line-height: 1;
+  margin-bottom: 0;
 }
 
 .post-content {
