Create photo page
- Add generator to create page for each photo
- Add controls to move to previous/next photo
- Maintain consistency across whole site

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -24,3 +24,10 @@
 .photo-caption {
   margin-bottom: $spacing-unit;
 }
+
+#carousel-container > a {
+  background-color: $grey-color-light;
+  color: $grey-color-dark;
+  padding: 5px 10px;
+  border-radius: 5px;
+}
