--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -23,7 +23,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 
   &,
   &:visited {
-    color: $grey-color-dark;
+    color: $text-color;
   }
 }
 
