--- a/_includes/post-entry.html
+++ b/_includes/post-entry.html
@@ -1,9 +1,7 @@
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
 <tr>
-    <td class="td-date">
-        <span class="post-list-meta">{{ post.date | date: date_format }}</span>
-    </td>
     <td>
+        <span class="post-list-meta">{{ post.date | date: date_format }}</span><br>
         <a class="post-link" href="{{ post.url | relative_url }}">
             {{ post.title | escape }}
         </a>
