--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -4,11 +4,9 @@
 }
 
 .tag, #tag-cloud > a {
-  background-color: $grey-color-light;
   color: $grey-color-dark;
+  text-decoration: underline;
   padding: 5px 10px;
-  border-radius: 5px;
-  margin: 3px;
 }
 
 #tag-cloud {
