Simplify tag appearance (part 2)

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -6,7 +6,7 @@
 .tag, #tag-cloud > a {
   color: $grey-color-dark;
   text-decoration: underline;
-  padding: 5px 10px;
+  padding: 5px;
 }
 
 #tag-cloud {
