[Accessibility] Fix deprecated and wrong aria roles
- Bump 'jekyll' to 4.4.1, so that aria roles generated by 'kramdown' are
  correct
- Fix sass expressions containing division operator similar to commit
  jekyll/minima@21b4274ec3c3fbd0b6c7f55bf72bc8b724aeeacb

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -13,7 +13,7 @@
 }
 
 .subtitle {
-  margin-top: $spacing-unit / 8;
+  margin-top: $spacing-unit * .125;
   margin-bottom: $spacing-unit;
 }
 
@@ -29,5 +29,5 @@
 }
 
 h1, h2, h3, h4 {
-    margin-top: $spacing-unit / 0.8;
+    margin-top: $spacing-unit * 1.25;
 }
