--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -37,8 +37,8 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-  margin-top: $spacing-unit / 2;
-  margin-bottom: $spacing-unit / 2;
+  margin-top: $spacing-unit * .5;
+  margin-bottom: $spacing-unit * .5;
 }
 
 
@@ -106,7 +106,7 @@ h1, h2, h3, h4, h5, h6 {
 blockquote {
   background-color: $grey-color-light;
   border-left: 4px solid $grey-color;
-  padding-left: $spacing-unit / 2;
+  padding-left: $spacing-unit * .5;
   @include relative-font-size(1.125);
   letter-spacing: -1px;
   font-style: italic;
@@ -165,8 +165,8 @@ td.code {
   @include media-query($on-laptop) {
     max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
     max-width:         calc(#{$content-width} - (#{$spacing-unit}));
-    padding-right: $spacing-unit / 2;
-    padding-left: $spacing-unit / 2;
+    padding-right: $spacing-unit * .5;
+    padding-left: $spacing-unit * .5;
   }
 }
 
@@ -220,7 +220,7 @@ table:not(.post-table):not(.rouge-table) {
     }
   }
   th, td {
-    padding: ($spacing-unit / 3) ($spacing-unit / 2);
+    padding: ($spacing-unit * 33.3333333333 * .01) ($spacing-unit * .5);
   }
   th {
     background-color: lighten($grey-color-light, 3%);
