--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -51,7 +51,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 
   @include media-query($on-palm) {
     position: absolute;
-    right: $spacing-unit / 2;
+    right: $spacing-unit * .5;
     background-color: $background-color;
     text-align: center;
 
@@ -143,7 +143,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 
 .footer-heading {
   @include relative-font-size(1.125);
-  margin-bottom: $spacing-unit / 2;
+  margin-bottom: $spacing-unit * .5;
 }
 
 .contact-list,
@@ -155,14 +155,14 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 .footer-col-wrapper {
   @include relative-font-size(0.9375);
   color: $grey-color;
-  margin-left: -$spacing-unit / 2;
+  margin-left: -$spacing-unit * .5;
   @extend %clearfix;
 }
 
 .footer-col {
   float: left;
-  margin-bottom: $spacing-unit / 2;
-  padding-left: $spacing-unit / 2;
+  margin-bottom: $spacing-unit * .5;
+  padding-left: $spacing-unit * .5;
 }
 
 .footer-col-1 {
@@ -231,7 +231,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 
 .post-meta {
   @include relative-font-size(1);
-  margin-top: $spacing-unit / 8;
+  margin-top: $spacing-unit * .125;
 }
 
 .post-list-meta {
