--- a/_sass/minima/_syntax-highlighting.scss
+++ b/_sass/minima/_syntax-highlighting.scss
@@ -1,71 +1,82 @@
-/**
- * Syntax highlighting styles
- */
+$red: #D51A24;
+$pink:  #F7C5C7;
+$green: #307722;
+$blue: #1C6ACA;
+$yellow: #914d08;
+$magenta: #655978;
+$gray: #514E4D;
+
 .highlight {
-  background: #fff;
-  @extend %vertical-rhythm;
+  .err   { color: $background-color; background-color: $red } // Error
 
-  .highlighter-rouge & {
-    background: #eef;
-  }
+  .c     { color: $gray } // Comment
+  .cm    { color: $gray } // Comment.Multiline
+  .cp    { color: $green } // Comment.Preproc
+  .cpf   { color: $yellow } // Comment.PreprocFile
+  .c1    { color: $gray } // Comment.Single
+  .cs    { color: $gray } // Comment.Special
 
-  .c     { color: #998; font-style: italic } // Comment
-  .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { font-weight: bold } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #998; font-style: italic } // Comment.Multiline
-  .cp    { color: #999; font-weight: bold } // Comment.Preproc
-  .c1    { color: #998; font-style: italic } // Comment.Single
-  .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
+  .gd .x { color: $red    } // Generic.Deleted.Specific
   .ge    { font-style: italic } // Generic.Emph
-  .gr    { color: #a00 } // Generic.Error
-  .gh    { color: #999 } // Generic.Heading
-  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
+  .gh    { color: inherit } // Generic.Heading
+  .gi    { color: inherit } // Generic.Inserted
+  .gi .x { color: inherit } // Generic.Inserted.Specific
+  .go    { color: inherit } // Generic.Output
+  .gp    { color: inherit } // Generic.Prompt
+  .gr    { color: $red    } // Generic.Error
   .gs    { font-weight: bold } // Generic.Strong
-  .gu    { color: #aaa } // Generic.Subheading
-  .gt    { color: #a00 } // Generic.Traceback
-  .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { font-weight: bold } // Keyword.Declaration
-  .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #458; font-weight: bold } // Keyword.Type
-  .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #0086B3 } // Name.Builtin
-  .nc    { color: #458; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
-  .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #900; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
-  .ow    { font-weight: bold } // Operator.Word
-  .w     { color: #bbb } // Text.Whitespace
-  .mf    { color: #099 } // Literal.Number.Float
-  .mh    { color: #099 } // Literal.Number.Hex
-  .mi    { color: #099 } // Literal.Number.Integer
-  .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #d14 } // Literal.String.Backtick
-  .sc    { color: #d14 } // Literal.String.Char
-  .sd    { color: #d14 } // Literal.String.Doc
-  .s2    { color: #d14 } // Literal.String.Double
-  .se    { color: #d14 } // Literal.String.Escape
-  .sh    { color: #d14 } // Literal.String.Heredoc
-  .si    { color: #d14 } // Literal.String.Interpol
-  .sx    { color: #d14 } // Literal.String.Other
-  .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #d14 } // Literal.String.Single
-  .ss    { color: #990073 } // Literal.String.Symbol
-  .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
-  .il    { color: #099 } // Literal.Number.Integer.Long
+  .gt    { color: inherit } // Generic.Traceback
+  .gu    { color: inherit } // Generic.Subheading
+
+  .k     { color: $red; font-weight: bold; } // Keyword
+  .kc    { color: $red; font-weight: bold; } // Keyword.Constant
+  .kd    { color: $red; font-weight: bold; } // Keyword.Declaration
+  .kp    { color: $red; font-weight: bold; } // Keyword.Pseudo
+  .kr    { color: $red; font-weight: bold; } // Keyword.Reserved
+  .kt    { color: $blue; } // Keyword.Type
+
+  .n     { color: inherit }
+  .na    { color: inherit } // Name.Attribute
+  .nb    { color: $red   ; font-weight: bold; } // Name.Builtin
+  .bp    { color: $red   ; font-weight: bold; } // Name.Builtin.Pseudo
+  .nc    { color: inherit } // Name.Class
+  .ne    { color: inherit; } // Name.Exception
+  .nf    { color: $green; font-weight: bold; } // Name.Function
+  .ni    { color: inherit } // Name.Entity
+  .nl    { color: $red   ; font-weight: bold; } // Name.Label
+  .nn    { color: inherit } // Name.Namespace
+  .no    { color: inherit } // Name.Constant
+  .nt    { color: $red    } // Name.Tag
+  .nv    { color: inherit } // Name.Variable
+  .vc    { color: inherit } // Name.Variable.Class
+  .vg    { color: inherit } // Name.Variable.Global
+  .vi    { color: inherit } // Name.Variable.Instance
+
+  .o     { color: inherit } // Operator
+  .ow    { color: inherit } // Operator.Word
+
+  .m     { color: $magenta } // Literal.Number
+  .mf    { color: $magenta } // Literal.Number.Float
+  .mh    { color: $magenta } // Literal.Number.Hex
+  .mi    { color: $magenta } // Literal.Number.Integer
+  .il    { color: $magenta } // Literal.Number.Integer.Long
+  .mo    { color: $magenta } // Literal.Number.Oct
+
+  .s     { color: $yellow } // Literal.String
+  .s1    { color: $yellow } // Literal.String.Single
+  .s2    { color: $yellow } // Literal.String.Double
+  .sb    { color: $yellow } // Literal.String.Backtick
+  .sc    { color: $yellow } // Literal.String.Char
+  .sd    { color: $yellow } // Literal.String.Doc
+  .se    { color: $yellow } // Literal.String.Escape
+  .sh    { color: $yellow } // Literal.String.Heredoc
+  .si    { color: $yellow } // Literal.String.Interpol
+  .sr    { color: $yellow } // Literal.String.Regex
+  .ss    { color: $yellow } // Literal.String.Symbol
+  .sx    { color: $yellow } // Literal.String.Other
+
+  .w     { color: $gray } // Text.Whitespace
+
+  .lineno, .gl { color: $gray } // Line Number
+  .hll   { background-color: $pink } // Marked-lines
 }
