--- a/_layouts/photo_page.html
+++ b/_layouts/photo_page.html
@@ -22,7 +22,7 @@ layout: default_no_header
 </style>
 
 <h1 class="post-title p-name" itemprop="name headline">{{ page.title | escape }}</h1>
-<div class="subtitle">
+<div class="post-meta">
     view all <a href="/photography">{{site.title}}' photos</a>
 </div>
 
