--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -16,7 +16,7 @@ layout: page
 
 </style>
 
-<div class="subtitle">
+<div class="post-meta">
     subscribe
     <a href="{{ "/feed.xml" | relative_url }}">via RSS</a>,
     view all <a href="/blog/tags">tags</a>
