--- a/_layouts/tag_page.html
+++ b/_layouts/tag_page.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1 class="post-title tag-page-title">Tag: {{ page.tag }}</h1>
-<div class="subtitle">
+<div class="post-meta">
   view all
   <a href=/blog>posts</a>
   and
