--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -10,14 +10,6 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
-
-$grey-color:       #828282 !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
-
 $table-text-align: left !default;
 
 // Width of the content area
@@ -45,8 +37,11 @@ $on-laptop:        800px !default;
 
 // Import partials.
 @import
+  "colors",
   "minima/base",
   "minima/layout",
   "minima/syntax-highlighting",
-  "custom"
+  "tags",
+  "copy",
+  "photography"
 ;
