--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -207,8 +207,6 @@ $header-height: $base-line-height * $base-font-size * 1.8;
  * Page content
  */
 .page-content {
-  //padding: $spacing-unit 0;
-  padding: $spacing-unit 0;
   flex: 1;
 }
 
@@ -232,6 +230,7 @@ $header-height: $base-line-height * $base-font-size * 1.8;
 .post-meta {
   @include relative-font-size(1);
   margin-top: $spacing-unit * .125;
+  margin-bottom: $spacing-unit;
 }
 
 .post-list-meta {
