--- a/_sass/_photography.scss
+++ b/_sass/_photography.scss
@@ -1,13 +1,45 @@
 /**
  *  Photography
  */
+.thumbnail {
+  height: auto;
+  max-width: 100%;
+  display: block;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  grid-gap: 10px;
+}
+
+.grid-item {
+  width: 100%;
+}
+
 .photo-caption {
   margin-bottom: $spacing-unit;
 }
 
-#carousel-container > a {
-  background-color: $lavender;
-  padding: 5px 10px;
-  border: 0.15em solid $purple-border;
-  border-radius: 0.4em;
+#carousel-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+  a {
+    background-color: $lavender;
+    padding: 0.2em 0.4em;
+    border: 0.15em solid $purple-border;
+    border-radius: 0.4em;
+  }
+}
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
