--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -43,5 +43,6 @@ $on-laptop:        800px !default;
   "minima/syntax-highlighting",
   "tags",
   "copy",
-  "photography"
+  "photography",
+  "social"
 ;
