--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -2,10 +2,8 @@
 layout: default
 ---
 <article class="post">
-
   <div class="post-content">
     {{ content }}
   </div>
-  {%- include contact.html -%}
-
+  {%- include social.html -%}
 </article>
