Flatten _sass hierarchy

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -38,9 +38,9 @@ $on-palm:          600px !default;
 // Import partials.
 @import
   "colors",
-  "minima/base",
-  "minima/layout",
-  "minima/syntax-highlighting",
+  "base",
+  "layout",
+  "syntax-highlighting",
   "tags",
   "copy",
   "photography",
