--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -1,2 +1,3 @@
-<link rel="icon" type="image/svg+xml" href="/assets/favicon.svg">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon16.png">
 <link rel="manifest" href="/site.webmanifest">
