Make copy button size consistent

--- a/_sass/_copy.scss
+++ b/_sass/_copy.scss
@@ -12,6 +12,7 @@ pre.highlight {
 
   button {
     opacity: 0;
+    width: 5em;
     color: $magenta;
     border-color: $magenta;
     background-color: $lavender;
