--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,37 +1,13 @@
 <header class="site-header" role="banner">
 
   <div class="wrapper">
-    {%- assign default_paths = site.pages | map: "path" -%}
-    {%- assign page_paths = site.header_pages | default: default_paths -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
-        {{ site.title | escape }}
-    </a>
+    <div class="site-title"> {{ site.title | escape }} </div>
 
-    {%- if page_paths -%}
-      <nav class="site-nav">
-        <input type="checkbox" id="nav-trigger" class="nav-trigger" />
-        <label for="nav-trigger">
-          <span class="menu-icon" id="hamburger-icon">
-            <svg viewBox="0 0 18 14" width="29px" height="44px">
-              <path d="M18,1.484c0,0.82-0.665,1.484-1.484,1.484H1.484C0.665,2.969,0,2.304,0,1.484l0,0C0,0.665,0.665,0,1.484,0 h15.032C17.335,0,18,0.665,18,1.484L18,1.484z M18,7.516C18,8.335,17.335,9,16.516,9H1.484C0.665,9,0,8.335,0,7.516l0,0 c0-0.82,0.665-1.484,1.484-1.484h15.032C17.335,6.031,18,6.696,18,7.516L18,7.516z M18,13.516C18,14.335,17.335,15,16.516,15H1.484 C0.665,15,0,14.335,0,13.516l0,0c0-0.82,0.665-1.483,1.484-1.483h15.032C17.335,12.031,18,12.695,18,13.516L18,13.516z"/>
-            </svg>
-          </span>
-          <span class="menu-icon" id="x-icon">
-            <svg viewBox="0 0 18 14" width="29px" height="44px">
-              <path d="M 2 0 L 17 13 C 17 15 17 15 15 15 L 0 2 C 0 0 0 0 2 0 M 0 13 L 15 0 C 17 0 17 0 17 2 L 2 15 C 0 15 0 15 0 13"/>
-            </svg>
-          </span>
-        </label>
-
-        <div class="trigger">
-          {%- for path in page_paths -%}
-            {%- assign my_page = site.pages | where: "path", path | first -%}
-            {%- if my_page.title -%}
-            <a class="page-link" href="{{ my_page.url | relative_url }}">{{ my_page.title | escape }}</a>
-            {%- endif -%}
-          {%- endfor -%}
-        </div>
-      </nav>
-    {%- endif -%}
+    <nav class="site-nav">
+      {%- for path in site.header_pages -%}
+        {%- assign nav_page = site.pages | where: "path", path | first -%}
+        <a class="page-link {% if page.title == nav_page.title %} nav-selected {% endif %}" href="{{ nav_page.url | relative_url }}">{{ nav_page.title | escape }}</a>
+      {%- endfor -%}
+    </nav>
   </div>
 </header>
