Use loading=eager for 12 photos in photography
Even with lazy-loading in phone size devices the browser will usually
have to load around 15 photos. We can load an amount of photos eagerly
and speed up the initial rendering.

--- a/_includes/responsive-image.html
+++ b/_includes/responsive-image.html
@@ -29,7 +29,11 @@
         {%- endif %}
       >
 
-      <img src="/assets{{ include.path }}" alt="{{ include.alt }}" >
+      <img
+        src="/assets{{ include.path }}"
+        alt="{{ include.alt }}"
+        {% if include.loading %} loading="{{ include.loading }}" {% endif %}
+      >
     </picture>
   </a>
 
