--- a/_layouts/photo_page.html
+++ b/_layouts/photo_page.html
@@ -1,7 +1,7 @@
 ---
 layout: default_no_header
 ---
-view all <a href="/photography">{{site.title}}' photos</a>
+in <a href="/photography">{{site.title}}'s photography</a>
 ^^^
 <div id="carousel-container">
   {% if page.previous_photo %}
