Add title color and bold headers

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -13,8 +13,11 @@ $grey-color-dark:  darken($grey-color, 25%) !default;
 $red: #D51A24;
 $pink:  #F7C5C7;
 $green: #307722;
+$light-green: #d4efc9;
 $blue: #1C6ACA;
+$light-blue: #bcf2ed;
 $yellow: #914d08;
+$light-yellow: #f4eddc;
 $magenta: #655978;
 $lavender: #eef;
 // Not good enough contrast with $lavender.
