--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -55,15 +55,23 @@ $line: 1px solid $grey-color-light;
   letter-spacing: -1px;
   line-height: 1;
   margin-bottom: 0;
+  background-color: $lavender;
+  color: $magenta;
+  width: fit-content;
+  font-weight: bold;
+  padding: 0.1em 0.2em;
+  border-radius: 0.2em;
+  border: 0.2em solid $purple-border;
 }
 
 .post-content {
-  h1 { @include relative-font-size(1.5); }
-  h2 { @include relative-font-size(1.4); }
-  h3 { @include relative-font-size(1.3); }
-  h4 { @include relative-font-size(1.2); }
-  h5 { @include relative-font-size(1.1); }
-  h6 { @include relative-font-size(1); }
+  h1, h2, h3 {
+    font-weight: bold;
+  }
+
+  h1 { @include relative-font-size(1.2); }
+  h2 { @include relative-font-size(1.1); }
+  h3 { @include relative-font-size(1.0); }
 }
 
 /**
