Add support for comments via email

--- a/_includes/main.html
+++ b/_includes/main.html
@@ -30,3 +30,12 @@ is separated by a line with '^^^' characters.
     {{ main }}
   </div>
 </main>
+
+{% comment %}
+Unhide all elements that require JS to work properly.
+{% endcomment %}
+<script>
+  document.querySelectorAll('.hidden-no-js').forEach(el => {
+      el.classList.remove('hidden-no-js');
+  });
+</script>
