--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -32,7 +32,7 @@ body {
  * Set `margin-bottom` to maintain vertical rhythm
  */
 h1, h2, h3, h4, h5, h6,
-p, blockquote, pre,
+p:not(.comments p), blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
   margin-top: $spacing-unit * .5;
@@ -192,4 +192,12 @@ table:not(.post-table):not(.rouge-table) {
   tr:nth-child(even) {
     background-color: lighten($grey-color-light, 6%);
   }
+}
+
+/**
+ *  Elements that need javascript are hidden by default
+ *  and shown once <script> is executed.
+ */
+.hidden-no-js {
+  display: none;
 }
