--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -29,6 +29,7 @@ $usable-width: $content-width - 2 * $spacing-unit;
   "layout",
   "syntax-highlighting",
   "tags",
+  "comments",
   "copy",
   "blog",
   "photography",
