--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,7 +23,10 @@ on
   </div>
   {%- endif -%}
 
+  {% include comments.html %}
+
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
 {% include copy.html %}
+{% include send-email.html %}
