--- a/_includes/send-email.html
+++ b/_includes/send-email.html
@@ -1,11 +1,17 @@
 <script>
   function sendEmail(replyId = "") {
+    const form = document.getElementById(`comment-form-${replyId}`);
+    if (!form.checkValidity()) {
+      form.reportValidity(); // shows messages
+      return;
+    }
     const username = document.getElementById(`username-${replyId}`).value.trim();
     const comment  = document.getElementById(`comment-input-${replyId}`).value.trim();
 
     const subject = "Comment: {{ page.slug }}";
-    const body = `post: {{page.slug}}
-repliesTo: ${replyId ? replyId : ""}
+    let body = `post: {{page.slug}}`;
+    body += replyId ? `\nrepliesTo: ${replyId}` : "";
+    body += `
 name: ${username}
 comment: |-
 ${comment.split('\n').map(line => "  " + line).join('\n')}
