Use page.id instead of page.slug as post key in comments

--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -9,7 +9,7 @@
    {% include comment-form.html id="" reply=false %}
   </div>
   <div class="content">
-    {% assign comments = site.data.comments[page.slug] %}
+    {% assign comments = site.data.comments[page.id] %}
     {% if comments %}
 
       {% for comment in comments %}
