--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -28,5 +28,4 @@ on
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
 </article>
 
-{% include copy.html %}
-{% include send-email.html %}
+{% include script.html script="copy.js" %}
